--- a/index.html
+++ b/index.html
@@ -110,40 +110,56 @@
 
             <hr />
             <!-- Message US Section-->
-            <section id="contact" class="py-16 bg-white ... scroll-mt-24">
-                <div class="max-w-4xl mx-auto px-6">
-                    <h2 class="text-3xl font-bold text-center text-sky-700 mb-6">Contact Us</h2>
-                    <p class="text-center text-gray-600 mb-10">Out of Sight, Out of Mind. Dive in with us!</p>
+            <section id="contact" class="section-contact">
+                <div class="section-container">
+                    <h2 class="section-title">Contact Us</h2>
+                    <p class="section-subtitle">Out of Sight, Out of Mind. Dive in with us!</p>
 
-                    <div class="flex flex-col md:flex-row gap-8">
-                        <form id="contact-form" class="flex-1 space-y-4">
-                            <div>
-                                <label for="fname" class="block font-medium">First Name</label>
-                                <input type="text" id="fname" name="fname" class="w-full border border-gray-300 px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-sky-500" />
-                            </div>
-                            <div>
-                                <label for="lname" class="block font-medium">Last Name</label>
-                                <input type="text" id="lname" name="lname" class="w-full border border-gray-300 px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-sky-500" />
-                            </div>
-                            <div>
-                                <label for="country" class="block font-medium">Country</label>
-                                <select id="country" name="country" class="w-full border border-gray-300 px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-sky-500">
-                                <option value="australia">Australia</option>
-                                <option value="canada">Japan</option>
-                                <option value="usa">Finland</option>
-                                </select>
-                            </div>
-                            <div>
-                                <button type="submit" class="bg-sky-600 text-white px-6 py-2 rounded hover:bg-sky-700">Submit</button>
-                            </div>
-                        </form>
+                    <div class="form-wrapper">
+                    <form id="contact-form" class="contact-form">
+                        <div>
+                            <label for="fname" class="input-label">Name</label>
+                            <input type="text" id="fname" name="fname" class="input-field" />
+                        </div>
 
-                        <aside class="flex-1 bg-sky-50 p-6 border border-dashed rounded-lg">
-                            <p id="result-form" class="text-sky-700">We’d love to hear from you. Fill out the form and join our ocean fam!</p>
-                        </aside>
+                        <div>
+                            <label for="ldate" class="input-label">Born of Date</label>
+                            <input type="date" id="ldate" name="ldate" class="w-full border border-gray-300 px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-sky-500" value="<?= htmlspecialchars($ldate) ?>" required />
+                        </div>
+
+                        <div class="grid grid-cols-3 items-center gap-2"> 
+                            <label for="gender" class="input-label">Gender :</label>
+                            <div class="flex gap-4">
+                                <label class="ribbon-option">
+                                <input type="radio" name="gender" value="male" class="hidden peer" />
+                                <div class="ribbon-box peer-checked:bg-blue-500">Laki-laki</div>
+                                </label>
+                                <label class="ribbon-option">
+                                <input type="radio" name="gender" value="female" class="hidden peer" />
+                                <div class="ribbon-box peer-checked:bg-pink-500">Perempuan</div>
+                                </label>
+                            </div>  
+                        </div>
+
+                        <div class="grid grid-cols-3 items-start gap-2">
+                            <label for="message" class="label-text col-span-1 font-medium">Message</label>
+                            <textarea id="message" name="message" placeholder="Your Message" class="custom-textarea col-span-1 h-24 resize-none"></textarea>
+                        </div>
+
+                        <div>
+                            <button type="submit" class="submit-button">Submit</button>
+                        </div>
+                    </form>
+
+                    <aside class="result-aside">
+                        <p id="result-form" class="result-text">
+                        We’d love to hear from you. Fill out the form and join our ocean fam!
+                        </p>
+                    </aside>
                     </div>
                 </div>
             </section>
+
         </main>
             <hr />
         <!-- Footer Content-->
